--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -6,9 +6,19 @@ body {
 }
 
 .app__layout {
+    color: white;
     font-family: 'Montserrat', sans-serif;
+    height: 100vh;
     margin: 0 auto;
     width: 85%;
-    height: 100vh;
-    color: white;
+}
+
+
+/*_____footer_____*/
+
+.footer {
+    &__style {
+        font-style: italic;
+        text-align: center;
+    }
 }
