--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,21 +1,29 @@
-.header__layout {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.header{
+    &__layout {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 
     &--counter {
         align-self: center;
         justify-self: end;
     }
-}
+    &__menu {
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: end;
+    }
 
-.header {
+
     &__button {
         background-color: #9fdd5a;
         border-radius: 6px;
         border: none;
         color: black;
+        cursor: pointer;
         height: 30px;
-        width: 20%;
+        width: 60%;
     }
 
     &__title {
