*implement more actions on redux to only allow two cards flipped, as well as refactor some code *grid layout with grid areas in order to make the app responsive *change some styles

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,7 @@
 .main__layout {
     align-items: center;
     display: grid;
+    grid-area: main;
     grid-template-columns: repeat(4, 1fr);
     height: 70%;
     justify-items: center;
