--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -7,18 +7,16 @@ body {
 
 .app__layout {
     color: white;
+    display: grid;
+    grid-template-columns: 5% 90% 5%;
+    grid-template-rows: 10% 85% 5%;
+    grid-template-areas:
+        '. header .'
+        '. main .'
+        '. footer .';
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
     margin: 0 auto;
     width: 85%;
 }
 
-
-/*_____footer_____*/
-
-.footer {
-    &__style {
-        font-style: italic;
-        text-align: center;
-    }
-}
