--- a/src/css/header.scss
+++ b/src/css/header.scss
@@ -1,5 +1,6 @@
 .header{
     &__layout {
+        grid-area: header;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
