--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -8,12 +8,12 @@ body {
 .app__layout {
     color: white;
     display: grid;
-    grid-template-columns: 5% 90% 5%;
+    grid-template-columns: 100%;
     grid-template-rows: 10% 85% 5%;
     grid-template-areas:
-        '. header .'
-        '. main .'
-        '. footer .';
+        ' header '
+        ' main '
+        ' footer ';
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
     margin: 0 auto;
